--- a/streamUI/StreamAnalyzeWidget.ui
+++ b/streamUI/StreamAnalyzeWidget.ui
@@ -103,12 +103,22 @@
      </layout>
     </item>
     <item>
-     <layout class="QGridLayout" name="gridLayout" rowstretch="1,3" columnstretch="3,1">
+     <layout class="QGridLayout" name="gridLayout" rowstretch="1,3" columnstretch="1,3">
       <item row="1" column="1">
        <widget class="QTreeView" name="treeViewH26X"/>
       </item>
       <item row="0" column="0" rowspan="2">
-       <widget class="QTableView" name="tableViewNALU"/>
+       <widget class="QTableView" name="tableViewNALU">
+        <property name="minimumSize">
+         <size>
+          <width>800</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="dragEnabled">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1">
        <widget class="QTreeView" name="treeViewHead"/>
