--- a/streamUI/StreamAnalyzeWidget.ui
+++ b/streamUI/StreamAnalyzeWidget.ui
@@ -103,11 +103,8 @@
      </layout>
     </item>
     <item>
-     <layout class="QGridLayout" name="gridLayout" rowstretch="1,3" columnstretch="1,3">
-      <item row="1" column="1">
-       <widget class="QTreeView" name="treeViewH26X"/>
-      </item>
-      <item row="0" column="0" rowspan="2">
+     <layout class="QGridLayout" name="gridLayout" rowstretch="1,3,0" columnstretch="1,3">
+      <item row="0" column="0" rowspan="3">
        <widget class="QTableView" name="tableViewNALU">
         <property name="minimumSize">
          <size>
@@ -121,7 +118,10 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QTreeView" name="treeViewHead"/>
+       <widget class="QTextBrowser" name="textBrowserHead"/>
+      </item>
+      <item row="1" column="1" rowspan="2">
+       <widget class="QTreeView" name="treeViewH26X"/>
       </item>
      </layout>
     </item>
